# CMakeList.txt : CMake project for HistogramLtrace, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
# add_executable (ReadTxts "ReadTxts.cpp" "ReadTxts.h")
# add_executable (ListOfChar "ListOfChar.cpp" "ListOfChar.h")
add_executable (HistogramOfChar "HistogramOfChar.cpp" "HistogramOfChar.h")
# TODO: Add tests and install targets if needed.
